Fix renaming issues from refactoring