@@ -9,7 +9,7 @@ Sensor com.grivera.generator.Network generator and visualizer for CS2 Min-Cost F
 - [About](#about)
 - [Setup](#setup)
 - [Example](#example)
-  - [Terminal Output](#terminal-output) 
+  - [Terminal Output](#terminal-output)
   - [Generated Sensor com.grivera.generator.Network](#generated-sensor-network)
   - [Min-cost Path from DN03 to SN01](#min-cost-path-from-dn03-to-sn01)
   - [output_sensor_flow_diagram.inp](#outputsensorflowdiagraminp)
@@ -36,7 +36,7 @@ This program can also be used to run different strategies for sending data packe
 ### 1. Clone the Repository
 
 Open a command line or terminal instance and enter the following command:
-```shell
+```sh
 git clone https://github.com/grivera64/Sensor-Generator-with-MCF.git
 ```
 
@@ -45,31 +45,42 @@ from GitHub [here](https://github.com/grivera64/Sensor-Generator-with-MCF/archiv
 
 ### 2. Change directories into the source folder.
 
-```shell
+```sh
 cd Sensor-Generator-with-MCF
 cd src
 ```
 
 ### 3. Compile using javac
 
-```shell
+Windows
+```bat
+javac -p "%PATH_TO_FX%;." --add-modules javafx.controls,javafx.graphics,javafx.swing *.java -d ../bin
+```
+
+Mac/Linux
+```sh
 javac -p "${PATH_TO_FX};." --add-modules javafx.controls,javafx.graphics,javafx.swing *.java -d ../bin
 ```
 
 > **Note**: Environment variable `PATH_TO_FX` should be set to the location of the `lib/` folder from your JavaFX install. i.e. `openjfx-15.0.0.1-sdk/lib/`
-> 
+>
 > If you don't have your environment variable set up, you can replace the variable with the respective path manually.
 
 ### 4. Change directories into the binaries folder
 
-```shell
+```sh
 cd ..
 cd bin
 ```
 
 ### 5. Run the program
+Windows
+```sh
+java -p "%PATH_TO_FX%;." --add-modules javafx.controls,javafx.graphics,javafx.swing SensorToFlowNetworkMain 
+```
 
-```shell
+Mac/Linux
+```sh
 java -p "${PATH_TO_FX};." --add-modules javafx.controls,javafx.graphics,javafx.swing SensorToFlowNetworkMain 
 ```
 
